--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -1,9 +1,34 @@
 {
+  "home": "الرئيسية",
+  "backToHome": "العودة إلى الصفحة الرئيسية",
   "title": "اضغط لتكتشف شيئًا ممتعً",
-  "description": "اكتشف مواقع ممتعة وتعليمية كل يوم!",
-  "randomLocation":" موقع عشوائي ",
+  "description": "أشعر بالملل. هل تجد نفسك تقول أيًا مما سبق؟ إذا كان الأمر كذلك، فقد وصلت إلى الموقع الصحيح. بمجرد الضغط على الزر الأحمر، ستنتقل فورًا إلى أحد مئات المواقع التفاعلية المختارة خصيصًا لتخفيف الملل. لذا، جرّبها. اضغط على الزر ولن تشعر بالملل بعد الآن.",
+  "randomLocation": " موقع عشوائي ",
   "openInNewTab": "فتح في تبويب جديد",
   "privacyPolicy": "  سياسة الخصوصيه وشروط الاستخدام",
-    "contactUs": "اتصل بنا",
-    "aboutUs": "من نحن"
+  "contactUs": "اتصل بنا",
+  "aboutUs": "من نحن",
+  "bestSites": "أفضل المواقع",
+  "PrivacyPolicy": "سياسة الخصوصية",
+  "welcomeMessage": "مرحبًا بك في FunSites — طريقة بسيطة وممتعة لاكتشاف مواقع جديدة عشوائيًا! 🎲 هدفنا هو جعل وقتك على الإنترنت أكثر متعة من خلال عرض مواقع ممتعة ومبتكرة وفريدة من جميع أنحاء العالم.",
+  "funSitesDescription": "سواء كنت تبحث عن ألعاب، فكاهة، ألغاز، أو فقط شيء جديد للاستكشاف، FunSites يغطي كل ذلك. نحن نقوم بتحديث قائمتنا باستمرار للحفاظ على المتعة والجدة.",
+  "discoveryQuote": "“أحيانًا تحدث أفضل الاكتشافات عن طريق الصدفة.” 🚀",
+  "privacyNote": "ملاحظة: FunSites لا يجمع أي معلومات شخصية بدون موافقتك. لأي استفسارات بخصوص الخصوصية، يرجى الاتصال بنا على",
+  "contactUsTitle": "اتصل بنا",
+  "contactUsDescription": "هل لديك أسئلة أو اقتراحات؟ أرسل لنا رسالة وسنرد عليك!",
+  "contactNamePlaceholder": "اسمك",
+  "contactEmailPlaceholder": "بريدك الإلكتروني",
+  "contactMessagePlaceholder": "رسالتك",
+  "contactSendButton": "إرسال الرسالة",
+  "contactSending": "جاري الإرسال...",
+  "contactSuccess": "تم إرسال الرسالة بنجاح!",
+  "contactError": "فشل في إرسال الرسالة. حاول مرة أخرى!",
+  "aboutUsTitle": "معلومات عنا",
+  "aboutUsWelcome": "مرحبًا بك في FunSites — طريقة بسيطة وممتعة لاكتشاف مواقع جديدة عشوائيًا! 🎲 هدفنا هو جعل وقتك على الإنترنت أكثر متعة من خلال عرض مواقع ممتعة ومبتكرة وفريدة من جميع أنحاء العالم.",
+  "aboutUsDescription": "سواء كنت تبحث عن ألعاب، فكاهة، ألغاز، أو فقط شيء جديد للاستكشاف، FunSites يغطي كل ذلك. نحن نقوم بتحديث قائمتنا باستمرار للحفاظ على المتعة والجدة.",
+  "aboutUsQuote": "“أحيانًا تحدث أفضل الاكتشافات عن طريق الصدفة.” 🚀",
+  "entertainmentSites":"مواقع ترفيهية",
+  "Next":"التالي",
+  "Prevs":"السابق"
+
 }
