--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,9 +1,34 @@
 {
-  "title": "Click to discover something fun",
-  "description": "Discover fun and educational sites every day!",
-  "randomLocation":" Random Site ",
+  "home": "Home",
+  "backToHome": "Back to Home",
+  "title": "Go ahead, press the  Button",
+  "description": "I am bored.  Do you find yourself saying any of the above? If so, you've reached the right website. Clicking the red button will instantly take you to one of hundreds of interactive websites specially selected to alleviate boredom. So go ahead and give it a try. Press the  Button and be bored no more.",
+  "randomLocation": " Random Site ",
   "openInNewTab": "Open in new tab",
   "privacyPolicy": "Privacy Policy and Terms of Use",
   "contactUs": "Contact Us",
-  "aboutUs": "About Us"
+  "aboutUs": "About Us",
+  "bestSites": "Best Sites",
+  "PrivacyPolicy": "Privacy Policy",
+  "welcomeMessage": "Welcome to FunSites — a simple and fun way to discover new websites randomly! 🎲 Our goal is to make your time online more entertaining by showing you interesting, creative, and unique websites from around the world.",
+  "funSitesDescription": "Whether you're looking for games, humor, puzzles, or just something new to explore, FunSites has you covered. We constantly update our list to keep things fresh and fun.",
+  "discoveryQuote": "“Sometimes the best discoveries are made by accident.” 🚀",
+  "privacyNote": "Note: FunSites does not collect personal information without your consent. For any questions regarding your privacy, please contact us at",
+  "contactUsTitle": "Contact Us",
+  "contactUsDescription": "Have questions or suggestions? Send us a message and we'll get back to you!",
+  "contactNamePlaceholder": "Your Name",
+  "contactEmailPlaceholder": "Your Email",
+  "contactMessagePlaceholder": "Your Message",
+  "contactSendButton": "Send Message",
+  "contactSending": "Sending...",
+  "contactSuccess": "Message sent successfully!",
+  "contactError": "Failed to send message. Try again!",
+  "aboutUsTitle": "About Us",
+  "aboutUsWelcome": "Welcome to FunSites — a simple and fun way to discover new websites randomly! 🎲 Our goal is to make your time online more entertaining by showing you interesting, creative, and unique websites from around the world.",
+  "aboutUsDescription": "Whether you're looking for games, humor, puzzles, or just something new to explore, FunSites has you covered. We constantly update our list to keep things fresh and fun.",
+  "aboutUsQuote": "“Sometimes the best discoveries are made by accident.” 🚀",
+  "entertainmentSites":"Entertainment Sites",
+  "Next":"Next",
+  "Prevs":"Prevs"
+
 }
