--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -1,11 +1,12 @@
 {
   "home": "الرئيسية",
   "backToHome": "العودة إلى الصفحة الرئيسية",
-  "title": "اضغط لتكتشف شيئًا ممتعً",
-  "description": "أشعر بالملل. هل تجد نفسك تقول أيًا مما سبق؟ إذا كان الأمر كذلك، فقد وصلت إلى الموقع الصحيح. بمجرد الضغط على الزر الأحمر، ستنتقل فورًا إلى أحد مئات المواقع التفاعلية المختارة خصيصًا لتخفيف الملل. لذا، جرّبها. اضغط على الزر ولن تشعر بالملل بعد الآن.",
+  "title": "مللت؟",
+  "subTitle": "هيا، اضغط على زر الملل",
+  "description": "أشعر بالملل. أشعر بملل شديد. أشعر بالملل في المدرسة. أشعر بالملل في العمل. أشعر بالملل حتى البكاء. أشعر بالملل حتى الموت. هل تجد نفسك تقول أيًا مما سبق؟ إذا كان الأمر كذلك، فقد وصلت إلى الموقع الصحيح. بمجرد الضغط على الزر الأحمر، ستنتقل فورًا إلى أحد مئات المواقع التفاعلية المختارة خصيصًا لتخفيف الملل. لذا، جرّبها. اضغط على زر 'الملل' ولن تشعر بالملل بعد الآن.",
   "randomLocation": " موقع عشوائي ",
   "openInNewTab": "فتح في تبويب جديد",
-  "privacyPolicy": "  سياسة الخصوصيه وشروط الاستخدام",
+  "privacyPolicy": "  سياسة الخصوصيه ",
   "contactUs": "اتصل بنا",
   "aboutUs": "من نحن",
   "bestSites": "أفضل المواقع",
