--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,11 +1,12 @@
 {
   "home": "Home",
   "backToHome": "Back to Home",
-  "title": "Go ahead, press the  Button",
-  "description": "I am bored.  Do you find yourself saying any of the above? If so, you've reached the right website. Clicking the red button will instantly take you to one of hundreds of interactive websites specially selected to alleviate boredom. So go ahead and give it a try. Press the  Button and be bored no more.",
+  "title": "Bored?",
+  "subTitle":"Go ahead, press the Bored Button",
+  "description": "I am bored. I'm so bored. I'm bored at school. I'm bored at work. I'm bored to tears. I'm bored to death. Do you find yourself saying any of the above? If so, you've reached the right website. Clicking the red button will instantly take you to one of hundreds of interactive websites specially selected to alleviate boredom. So go ahead and give it a try. Press the Bored Button and be bored no more.",
   "randomLocation": " Random Site ",
   "openInNewTab": "Open in new tab",
-  "privacyPolicy": "Privacy Policy and Terms of Use",
+  "privacyPolicy": "Privacy Policy",
   "contactUs": "Contact Us",
   "aboutUs": "About Us",
   "bestSites": "Best Sites",
