--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -1,9 +1,9 @@
 {
   "home": "الرئيسية",
   "backToHome": "العودة إلى الصفحة الرئيسية",
-  "title": "مللت؟",
-  "subTitle": "هيا، اضغط على زر الملل",
-  "description": "أشعر بالملل. أشعر بملل شديد. أشعر بالملل في المدرسة. أشعر بالملل في العمل. أشعر بالملل حتى البكاء. أشعر بالملل حتى الموت. هل تجد نفسك تقول أيًا مما سبق؟ إذا كان الأمر كذلك، فقد وصلت إلى الموقع الصحيح. بمجرد الضغط على الزر الأحمر، ستنتقل فورًا إلى أحد مئات المواقع التفاعلية المختارة خصيصًا لتخفيف الملل. لذا، جرّبها. اضغط على زر 'الملل' ولن تشعر بالملل بعد الآن.",
+  "title": "طفشااان؟",
+  "subTitle": "كل ضغطة بلقطة",
+  "description": "أشعر بالملل. هل تجد نفسك تقول أيًا مما سبق؟ إذا كان الأمر كذلك، فقد وصلت إلى الموقع الصحيح. بمجرد الضغط على الزر الأحمر، ستنتقل فورًا إلى أحد مئات المواقع التفاعلية المختارة خصيصًا لتخفيف الملل. لذا، جرّبها. اضغط على زر 'الملل' ولن تشعر بالملل بعد الآن.",
   "randomLocation": " موقع عشوائي ",
   "openInNewTab": "فتح في تبويب جديد",
   "privacyPolicy": "  سياسة الخصوصيه ",
@@ -28,8 +28,42 @@
   "aboutUsWelcome": "مرحبًا بك في FunSites — طريقة بسيطة وممتعة لاكتشاف مواقع جديدة عشوائيًا! 🎲 هدفنا هو جعل وقتك على الإنترنت أكثر متعة من خلال عرض مواقع ممتعة ومبتكرة وفريدة من جميع أنحاء العالم.",
   "aboutUsDescription": "سواء كنت تبحث عن ألعاب، فكاهة، ألغاز، أو فقط شيء جديد للاستكشاف، FunSites يغطي كل ذلك. نحن نقوم بتحديث قائمتنا باستمرار للحفاظ على المتعة والجدة.",
   "aboutUsQuote": "“أحيانًا تحدث أفضل الاكتشافات عن طريق الصدفة.” 🚀",
-  "entertainmentSites":"مواقع ترفيهية",
-  "Next":"التالي",
-  "Prevs":"السابق"
+  "entertainmentSites": "مواقع ترفيهية",
+  "Next": "التالي",
+  "Prevs": "السابق",
+  "funopiWelcome": "مرحباً بك في FUNOPI",
+  "funopiIntro": "نحن منصة ترفيهية مبتكرة تعتمد على فكرة بسيطة وممتعة: كل ضغطة تنقلك إلى عالم جديد!",
+  "funopiDescription": "يعمل FUNOPI على استكشاف أفضل المواقع الترفيهية والغريبة والمفيدة من الإنترنت، ويعرضها لك بشكل عشوائي وبضغطة واحدة فقط، ليمنحك تجربة اكتشاف ممتعة، سريعة، وغير متوقعة في كل مرة تدخل فيها الموقع.",
+  "funopiExperienceTitle": "نحن نقدم تجربة:",
+  "funopiFeatures1": "خفيفة وسريعة",
+  "funopiFeatures2": "ممتعة لكل الأعمار",
+  "funopiFeatures3": "بدون تسجيل",
+  "funopiFeatures4": "وبدون تعقيد",
+  "funopiGoal": "هدفنا أن نكون منصتك الأولى للتسلية اللحظية واستكشاف مواقع جديدة لم ترها من قبل.",
+  "funopiDailyUpdate": "وكل يوم نضيف مواقع جديدة مختارة بعناية لتعزيز تجربتك.",
+  "funopiClosing": "مرحباً بك في عالم FUNOPI — ضغطة واحدة… وعالم جديد ينتظرك!",
+  "privacyTitle": "سياسة الخصوصية",
+  "privacyIntro": "في FUNOPI نحترم خصوصيتك ونحرص على حماية بياناتك أثناء استخدامك لموقعنا. نود توضيح النقاط التالية بشكل مبسّط:",
+  "privacySection1Title": "1. المعلومات التي نجمعها",
+  "privacySection1Point1": "لا نطلب أي تسجيل أو بيانات شخصية.",
+  "privacySection1Point2": "قد نستخدم ملفات تعريف الارتباط (Cookies) لتحسين سرعة وأداء الموقع فقط.",
+  "privacySection1Point3": "قد يتم استخدام أدوات تحليل مثل Google Analytics لمعرفة عدد الزيارات وفهم تفاعل المستخدمين — بدون جمع بيانات تعريف شخصية.",
 
+  "privacySection2Title": "2. كيف نستخدم البيانات",
+  "privacySection2Point1": "لتحسين تجربة الاستخدام.",
+  "privacySection2Point2": "لا نبيع أو نشارك أي بيانات مع أطراف ثالثة لأغراض تجارية.",
+
+  "privacySection3Title": "3. الروابط الخارجية",
+  "privacySection3Desc": "يحتوي FUNOPI على روابط لمواقع خارجية، ونحن لسنا مسؤولين عن محتوى أو ممارسات الخصوصية لتلك المواقع. نوصي بقراءة سياسات الخصوصية الخاصة بكل موقع تنتقل إليه عبر المنصّة.",
+
+  "privacySection4Title": "4. الإعلانات",
+  "privacySection4Desc": "قد يعرض FUNOPI إعلانات من أطراف ثالثة مثل Google AdSense، والتي قد تستخدم أدوات التتبع لتحسين عرض الإعلانات بناءً على اهتماماتك.",
+
+  "privacySection5Title": "5. حماية البيانات",
+  "privacySection5Desc": "نستخدم معايير معتمدة لحماية الموقع والاتصالات من أي محاولة اختراق أو سوء استخدام.",
+
+  "privacySection6Title": "6. التعديلات على السياسة",
+  "privacySection6Desc": "قد نقوم بتحديث سياسة الخصوصية من وقت لآخر، وسيتم نشر أي تغيير على هذه الصفحة.",
+
+  "privacyContact": "إذا لديك أي سؤال أو طلب، يسعدنا التواصل عبر صفحة اتصل بنا."
 }
